Added fullscreen for views.

--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -14,7 +14,7 @@
           Extends: Core.Abstract,
           create: function(){
             this.base.setStyles({
-              'background-image':'url(/Themes/Chrome/images/grid5.png)',
+              'background-image':'url(../gdotui/Themes/Chrome/images/grid5.png)',
               'width':'100%',
               'height':'100%'
             })
